DLCs
- Demonics

V1.5.2- - -
Debug Page, Commands list:
- 1. debugresetprog | Resets all progress
- 2. debugcheat(cheatname) | Activate cheats
- 3. debugremove 100 | Remove Cash can change custom amount
Fixes Current Axe, & Current Car Display Bugs.

V1.4.2- - -
Fixes cant scroll on Smaller screens in Biomes. Fixes Lumbermill All Lumber Mill Related Problems.

V1.3.1- - - More Complete Version for the Demonics DLC.
Moves Lumber Counts to a new Inventory implement. ATVs Now Deliver 20% Faster.
Fixes Insanely high price for Demonic Mo-Bile. Fixed Mobile buttons Layout. Fixes
Demonic Table size. Fixes "Vampire Forest" to "Demonic Forest". Fixes Double Tap Zoom
on IPhones. Adds Nightcrawler car to shop which can also deliver soul lumber. 
Demonic Axe is now 850 Cash.

V1.2.0- - -Demonics
Demonics DLC Includes Vampire Furniture in the shop.
Includes Vampire Forest. Soul Lumber. And Delivery places.
Adds Cars Dealership, And a Special Demonic Mo-Bile used for vampire deliveries.
Adds new Demonic Axe.New Demonic Home. Demonic Furniture Demonic Chest
where people can store Soul Lumber.