@@ -6,6 +6,8 @@ Debug Page, Commands list:
 - 1. debugresetprog | Resets all progress
 - 2. debugcheat(cheatname) | Activate cheats
 - 3. debugremove 100 | Remove Cash can change custom amount
+- 4. debugchangelog | Displays Changelog, Only works in browser version
+- 5. debugdownload | Takes you to github page to Download/Update
 Fixes Current Axe, & Current Car Display Bugs.
 
 V1.4.2- - -
